[project]
name = "stacks"
version = "0.1.0"
description = "Empirical research tracker MCP server — arXiv integration, experiment lineage, synthesis, peer review, and graph visualization"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=0.4",
    "arxiv>=2.1",
]

[project.scripts]
research-tracker = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]